2010-10-19  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.c (rx_function_value): Small integer types are
	promotes to SImode.
	(rx_promote_function_mode): New function.
	(TARGET_PROMOTE_FUNCTION_MODE): Define.

2010-10-19  Nick Clifton  <nickc@redhat.com>

	* config/mep/mep.c (mep_print_operand): Use
	targetm.strip_name_encoding.
	(mep_output_aligned_common): Likewise.

2010-10-19  Basile Starynkevitch  <basile@starynkevitch.net>
	* gengtype.c (new_structure): Remove ad-hoc "location_s"
	processing.

2010-10-18  Richard Henderson  <rth@redhat.com>

	 * simplify-rtx.c (simplify_ternary_operation) [FMA]: Simplify
	(fma (neg a) (neg b) c) and (fma a (neg b) c).

2010-10-18  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (IX86_BUILTIN_VFMSUBSS, IX86_BUILTIN_VFMSUBSD,
	IX86_BUILTIN_VFMSUBPS, IX86_BUILTIN_VFMSUBPD,
	IX86_BUILTIN_VFMSUBADDPS, IX86_BUILTIN_VFMSUBADDPD,
	IX86_BUILTIN_VFNMADDSS, IX86_BUILTIN_VFNMADDSD,
	IX86_BUILTIN_VFNMADDPS, IX86_BUILTIN_VFNMADDPD,
	IX86_BUILTIN_VFNMSUBSS, IX86_BUILTIN_VFNMSUBSD,
	IX86_BUILTIN_VFNMSUBPS, IX86_BUILTIN_VFNMSUBPD,
	IX86_BUILTIN_VFMSUBADDPS256, IX86_BUILTIN_VFMSUBADDPD256,
	IX86_BUILTIN_VFNMADDPS256, IX86_BUILTIN_VFNMADDPD256,
	IX86_BUILTIN_VFNMSUBPS256, IX86_BUILTIN_VFNMSUBPD256): Remove.
	(bdesc_multi_arg): Remove the corresponding builtins.
	* config/i386/i386.md (UNSPEC_FMA4_INTRINSIC): Remove.
	(UNSPEC_FMA4_FMSUBADD): Remove.
	(UNSPEC_FMADDSUB): Rename from UNSPEC_FMA4_FMADDSUB.
	* config/i386/sse.md (FMA4MODEF4): Remove.
	(FMAMODE): Add.
	(fma<mode>4): New expander.
	(*fma4i_fmadd_<mode>): Macroize from fma4i_fmadd<mode>4 patterns,
	and use FMA rtx code instead of UNSPEC_FMA4_INTRINSIC.
	(*fma4i_fmsub_<mode>): Similarly.
	(*fma4i_fnmadd_<mode>): Similarly.
	(*fma4i_fnmsub_<mode>): Similarly.
	(fma4i_vmfmadd_<mode>): Scalar patterns zero-extend, not merge
	with the first operand.
	(fma4i_fmaddsub_<mode>): Represent with UNSPEC_FMADDSUB instead
	of explicit arithmetic.  Macroize with AVXMODEF2P.