@@ -1,3 +1,9 @@
+2010-10-19  Francois-Xavier Coudert<fxcoudert@gcc.gnu.org>
+
+	PR fortran/43414
+	* dwarf2out.c (add_calling_convention_attribute): Flag main
+	Fortran subroutine with DW_AT_main_subprogram.
+
 2010-10-19  Nick Clifton  <nickc@redhat.com>
 
 	* config/rx/rx.c (rx_function_value): Small integer types are
